compiler/fir/analysis-tests/testData/resolve/expresssions/invoke/farInvokeExtension.kt


fun x() {}

operator fun Int.invoke(): Foo = <!UNRESOLVED_LABEL!>this@Foo<!>

class Foo {

    val x = 0

    fun foo() = x() // should resolve to fun x
}